--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
@@ -26,4 +26,37 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+} */
+
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
+
+body {
+	min-width: 320px;
+	min-height: 100vh;
+}
+
+#root {
+	display: flex;
+  flex-direction: column;
+	width: 100%;
+	height: 100vh;
+}
+
+.main-header {
+	background-color: #7e0202;
+	color: #ffffff;
+	display: flex;
+	justify-content: space-between;
+	padding: 10px 20px;
+	align-items: center;
+}
+
+.main-content {
+  width: 100%;
+  height: 100%;
+  display: flex;
 }
