--- a/frontend/src/components/common/Navigation/MainNavigation.css
+++ b/frontend/src/components/common/Navigation/MainNavigation.css
@@ -3,23 +3,22 @@ nav {
   width: fit-content;
   flex-direction: column;
   align-items: center;
-  gap: 2rem;
+  gap: 4rem;
 }
 
 nav a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 0.5rem;
   text-decoration: none;
   color: #7e0202;
-  margin: 0.5rem 0;
-  font-size: 1.2rem;
+  font-size: 1rem;
   font-weight: bold;
+  gap: 0.5rem;
 }
 
 .side-icon {
-  font-size: 4rem;
+  font-size: 3.5rem;
 }
 
 .fill {
@@ -27,4 +26,16 @@ nav a {
   color: white;
   border: #7e0202 solid 2px;
   border-radius: 10px;
+}
+
+/* Media queries for responsive design */
+@media (max-width: 1200px) {
+  nav {
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-around;
+  }
+  .side-icon {
+    font-size: 2rem;
+  }
 }
