--- a/frontend/src/components/common/Navigation/SideNavigation.css
+++ b/frontend/src/components/common/Navigation/SideNavigation.css
@@ -1,5 +1,5 @@
 .side-header {
-  width: 10%;
+  width: 8%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,11 +8,12 @@
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
 }
 
-@media (max-width: 768px) {
+/* Media queries for responsive design */
+@media (max-width: 1200px) {
   .side-header {
+    width: 100%;
     height: auto;
     flex-direction: row;
-    justify-content: space-between;
-    padding: 1rem;
+    justify-content: space-around;
   }
 }
