--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,62 +1,69 @@
-/* :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #303846;
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  text-align: center;
-  justify-content: center;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-} */
-
-* {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
-}
-
-body {
-	min-width: 320px;
-	min-height: 100vh;
 }
 
 #root {
-	display: flex;
+  display: flex;
   flex-direction: column;
-	width: 100%;
-	height: 100vh;
+  width: 100%;
+  height: 100vh;
 }
 
 .main-header {
-	background-color: #7e0202;
-	color: #ffffff;
-	display: flex;
-	justify-content: space-between;
-	padding: 10px 20px;
-	align-items: center;
+  background-color: #7e0202;
+  color: #ffffff;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 20px;
 }
 
 .main-content {
   width: 100%;
   height: 100%;
   display: flex;
+}
+
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+
+/* Media queries for responsive design */
+@media (max-width: 1200px) {
+  .main-content {
+    flex-direction: column;
+  }
+  .side-header {
+    display: none;
+  }
+}
+
+@media (max-width: 768px) {
+  .main-header {
+    flex-direction: column;
+    align-items: center;
+  }
+  .main-navigation__title {
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .main-navigation__title {
+    font-size: 1.2rem;
+  }
+  .right-side > button, .user-icon {
+    width: 2rem;
+    height: 2rem;
+  }
 }
