--- a/frontend/src/components/common/Classroom/PostList.css
+++ b/frontend/src/components/common/Classroom/PostList.css
@@ -8,3 +8,24 @@
   border: 2px solid #d3d3d3;
   border-radius: 12px;
 }
+
+.classroom-page__link {
+  display: flex;
+	align-items: center;
+  width: fit-content;
+  color: white;
+	margin: 0;
+  text-decoration: none;
+  font-weight: bold;
+  padding: 10px 20px 10px 10px;
+  border-radius: 12px;
+  gap: 10px;
+  font-size: 1rem;
+  background-color: #7e0202;
+}
+
+
+.classroom-page__icon {
+  font-size: 2rem;
+  color: white;
+} 
