--- a/frontend/src/pages/CourseListPage/CourseListPage.css
+++ b/frontend/src/pages/CourseListPage/CourseListPage.css
@@ -1,6 +1,15 @@
+.course-list__page {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .course-list__container {
   width: 100%;
   height: 100%;
-  padding: 20px 50px;
+  padding: 0px 50px 20px 50px;
 }
 
