--- a/frontend/src/components/common/Courses/CourseItem.css
+++ b/frontend/src/components/common/Courses/CourseItem.css
@@ -59,3 +59,12 @@
   font-size: 1rem;
 }
 
+.course-item__button {
+  padding: 0.5rem;
+  font: inherit;
+  color: white;
+  background: #7e0202;
+  border: 1px solid #7e0202;
+  border-radius: 8px;
+  cursor: pointer;
+}
