--- a/frontend/src/components/common/Classroom/PostList.css
+++ b/frontend/src/components/common/Classroom/PostList.css
@@ -9,6 +9,11 @@
   border-radius: 12px;
 }
 
+.post-list__buttons {
+  display: flex;
+  gap: 20px;
+}
+
 .classroom-page__link {
   display: flex;
 	align-items: center;
@@ -17,13 +22,22 @@
 	margin: 0;
   text-decoration: none;
   font-weight: bold;
-  padding: 10px 20px 10px 10px;
+  padding: 10px 10px;
   border-radius: 12px;
   gap: 10px;
   font-size: 1rem;
   background-color: #7e0202;
 }
 
+.course-item__edit {
+  display: flex;
+  font: inherit;
+  color: white;
+  background: #7e0202;
+  border: 1px solid #7e0202;
+  cursor: pointer;
+  padding: 5px 5px;
+}
 
 .classroom-page__icon {
   font-size: 2rem;
